follow-up updates on the contact widget.

--- a/src/lib/assets/global.css
+++ b/src/lib/assets/global.css
@@ -109,13 +109,12 @@
 
     &::after {
       content: "";
-      @apply absolute;
+      @apply absolute bg-card transition-all duration-200;
       border-radius: inherit;
       top: 1px;
       bottom: 1px;
       left: 1px;
       right: 1px;
-      @apply bg-card;
       z-index: -2;
     }
   }
